# vision-based-localization

./: LICENSE  README.md  markerdetection.cpp
KnuMarkerViewer/: CMakeLists.txt
KnuMarkerViewer/shader/: grid.fs  grid.vs  sample.fragment  sample.vertex
KnuMarkerViewer/src/: knuCamera.cpp  knuCamera.h  knuGlModel.cpp  knuGlModel.h  main.cpp  yeAssimp.cpp  yeAssimp.h
_practice/: README.md
_practice/calibration/: charucoboard.cpp
_practice/detection/: README.md  markerdetection.cpp  markerdetection_2.cpp
_practice/opengl/: README.md  triangle.cpp
calibration/: README.md  calibrate.cpp  output.txt
detection/: README.md  dict.hpp  markerdetection.cpp
libs/gl3w_190703/src/: gl3w.c
marker/: README.md
opengl/: README.md
